<resources>


    <!--
    startmenu.
    card.
    attributes.
    overlays.
    headlines.
    -->


    <string name="app_name">Is it ... ?</string>

    <string name="hello_world">Hallo</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_settings2">Beenden</string>
    <string name="txt_start">Spiel Starten</string>
    <string name="txt_set_new_online_game">Neues Spiel anlegen</string>
    <string name="txt_online">Online Spiel</string>
    <string name="txt_create_set">Set erstellen</string>
    <string name="txt_options">Optionen</string>
    <string name="txt_end">Beenden</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="txt_language">Sprache</string>
    <string name="txt_Statistic_title">Statistiken</string>
    <string name="txt_bStatistic">Statistik</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="txt_startmenu">Zurück zum Hauptmenü</string>


    <!-- Start new game options menu-->
    <string name="tv_startng_selectCardset">Wähle ein Kartenset!</string>
    <string name="tv_startng_selectIsEnemyHuman">Gegen einen Freund?</string>
    <string name="tv_startng_selectEnemyDifficulty">Wähle deinen Gegner</string>
    <string name="b_sng_startGame">Spiel starten</string>
    <string name="txt_sng_FlipCardsAuto">Karten automatisch umklappen?</string>

    <string-array name="lang_array">
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>Italienisch</item>
    </string-array>
    <string name="title_activity_activity_board_question">activity_board_question</string>
    <string name="title_activity_start_new_game">StartNewGameActivity</string>
    <string name="tv_Select_Cardset">Da</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="title_activity_sliding_menu_up_test">slidingMenuUpTestActivity</string>

    <string name="txt_activity_board_question_isIt">Ist es?</string>

    <!-- BoardGameActivity -->
    <string name="difficulty_easy">leichter Gegner</string>
    <string name="difficulty_normal">normaler Gegner</string>
    <string name="difficulty_hard">schwerer Gegner</string>
    <string name="difficulty_unfair">Hellseher</string>

    <string name="default_card_set_name">defaultset</string>
    <string name="title_activity_network_test">NetworkTestActivity</string>


    <!-- StatisticActivity -->
    <string name="statistic_activity_LegendName">Name</string>
    <string name="statistic_activity_LegendWon">Siege:</string>
    <string name="statistic_activity_LegendLost">Niederlagen:</string>


    <!-- OptionsActivity -->
    <string name="option_activity_LegendTitle">Profildaten anpassen</string>
    <string name="option_activity_LegendName">Nutzername</string>
    <string name="option_activity_LegendPassword">Passwort</string>
    <string name="option_activity_LegendEmail">Email</string>
    <string name="option_activity_btDatanAendern">Daten ändern</string>

    <string name="Logout">Logout</string>


</resources>
