<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wlg.ratewer.Activities.OptionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_language"
        android:id="@+id/tvLanguage"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="67dp"
        style="@style/StandartFont"
        android:textColor="@color/primarydark" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/lang_array"
        style="@style/StandartFont"
        android:dropDownSelector="#180505"
        android:dropDownWidth="match_parent"
        android:focusableInTouchMode="false"
        android:layout_above="@+id/btnOptionLogin"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:id="@+id/btnOptionLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_activity_LegendName"
        android:id="@+id/tv_options_LegendName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_options_Name"
        android:layout_marginEnd="23dp"
        android:layout_alignTop="@+id/tv_options_LegendName"
        android:layout_alignParentEnd="true"
        android:text="______________"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_activity_LegendPassword"
        android:id="@+id/tv_options_LegendPassword"
        android:layout_below="@+id/tv_options_Name"
        android:layout_alignEnd="@+id/tvLanguage"
        android:layout_marginTop="43dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/tv_options_Password"
        android:layout_alignTop="@+id/tv_options_LegendPassword"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_activity_LegendEmail"
        android:id="@+id/tv_options_LegendEmail"
        android:layout_below="@+id/tv_options_Password"
        android:layout_alignStart="@+id/tv_options_LegendPassword"
        android:layout_marginTop="43dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/tv_options_Email"
        android:layout_alignTop="@+id/tv_options_LegendEmail"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_activity_btDatanAendern"
        android:id="@+id/tv_options_bt_changeUser"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
