<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartActivity"
    android:background="@color/backgroundbright">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/primary"
        android:id="@+id/llHeader"
        >


        <FrameLayout
            style="@style/GreenBarTop"></FrameLayout>

        <TextView
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Is it...?"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="30px"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            android:textColor="@color/textcolorbright"
             />

        <TextView
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Is it...?"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10px"
            android:textColor="@color/textcolorbright"
            android:layout_marginBottom="30px"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/llMenu"
        android:layout_below="@+id/llHeader">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start"
            android:id="@+id/bStart"
            android:background="@color/primary"
            android:layout_above="@+id/bOptions"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textcolorbright"
            android:layout_margin="10sp"
            android:padding="10dp"
            style="@style/StandartFont"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_online"
            android:id="@+id/bOnline"
            android:background="@color/primary"
            android:layout_above="@+id/bStart"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textcolorbright"
            android:layout_margin="10sp"
            android:padding="10dp"
            style="@style/StandartFont"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_create_set"
            android:id="@+id/bSetCreator"
            android:background="@color/primary"
            android:layout_above="@+id/bOnline"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textcolorbright"
            android:layout_margin="10sp"
            android:padding="10dp"
            style="@style/StandartFont"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_options"
            android:id="@+id/bOptions"
            android:background="@color/primary"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/bStatistic"
            android:textColor="@color/textcolorbright"
            android:layout_margin="10sp"
            android:padding="10dp"
            style="@style/StandartFont"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_bStatistic"
            android:id="@+id/bStatistic"
            android:layout_above="@+id/bEnd"
            android:layout_centerHorizontal="true"
            android:background="@color/primary"
            android:textColor="@color/textcolorbright"
            android:layout_margin="10sp"
            android:padding="10dp"
            style="@style/StandartFont"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end"
            android:id="@+id/bEnd"
            android:background="@color/primary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textcolorbright"
            android:layout_margin="10sp"
            android:padding="10dp"
            style="@style/StandartFont"/>



    </LinearLayout>







</RelativeLayout>
