<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.wlg.ratewer.Activities.StartNewGameActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_startng_selectCardset"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_cardsets"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KI"
        android:id="@+id/textView4"
        android:layout_below="@+id/sp_cardsets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="menchlische Spieler"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentStart="true"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar3"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/seekBar2"
        android:layout_alignStart="@+id/textView4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ki Schwierigkeit"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/seekBar3"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_sng_startGame"
        android:id="@+id/b_sng_start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"/>



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sng_FlipCardsAuto"
        android:id="@+id/tv_sng_FlipCardsAuto"
        android:checked="true"
        android:layout_below="@+id/seekBar3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"/>

</RelativeLayout>
